--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,17 +1,13 @@
-<!-- views/pages/about.ejs -->
-
 <!DOCTYPE html>
-<html lang="en">
-<meta charset="UTF-8">
+<html lang="en" >
 <head>
     <% include ../partials/head %>
 </head>
-<body class="container">
+  <body class="container" style="background : #FFCCFF;">
   <header>
       <% include ../partials/header %>
   </header>
-  <h1><%= title %></h1>
-  <p>Welcome to <%= title %></p>
-  <% include ../partials/footer %>
+  <br>
+  <h4>Welcome <%= user %>!!!<h4>
 </body>
 </html>
