--- a/views/pages/seller.ejs
+++ b/views/pages/seller.ejs
@@ -12,7 +12,7 @@
   </header>
 
 <div class="container">
-  <br><h4>Welcome Seller</h4>
+  <br><h4>Welcome <%= user %>!!</h4>
   <!-- Trigger the modal with a button -->
   <br>
   <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#myModal">Add Items</button>
