--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,10 @@
     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
   </li> -->
   <li class="nav-item">
-    <a class="nav-link" href="#"><i class="fas fa-user"></i></a>
+    <a class="nav-link" href="/customer"><i class="fas fa-user">Customer</i></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/seller"><i class="fas fa-user">Seller</i></a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i></a>
