--- a/views/pages/seller.ejs
+++ b/views/pages/seller.ejs
@@ -12,7 +12,7 @@
   </header>
 
 <div class="container">
-  <br><h4>Welcome <%= user %>!!</h4>
+  <br><h6>Welcome <%= user %>!!</h6>
   <!-- Trigger the modal with a button -->
   <br>
   <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#myModal">Add Items</button>
@@ -29,25 +29,25 @@
         </div>
         <div class="modal-body">
           <p>Details of item to be added.</p>
-          <form class="needs-validation" method="post" enctype="multipart/form-data">
+          <form method="post" action="/seller/upload" enctype="multipart/form-data">
               <div class="form-row">
                 <div class="col-md-4 mb-3">
-                  <label for="validationTooltip01">ProductName</label>
-                  <input type="text" class="form-control" id="validationTooltip01" placeholder="First name" required>
+                  <label for="productName">ProductName</label>
+                  <input type="text" id="productName" class="form-control" name="productName" placeholder="Product name" required>
                   <div class="valid-tooltip">
                     Looks good!
                   </div>
                 </div>
                 <div class="col-md-4 mb-3">
                   <label for="prodDesc">ProductDescription</label>
-                  <input type="text" class="form-control" id="prodDesc" placeholder="Last name" required>
+                  <input type="text" class="form-control" name="prodDesc" placeholder="Last name" required>
                   <div class="valid-tooltip">
                     Looks good!
                   </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                  <label for="file">Upload image</label><br>
-                  <input type="file" name="file" required>
+                  <label for="avatar">Upload image</label><br>
+                  <input type="file" class="form-control" name="avatar" id="avatar" required/>
                 </div>
                 <!-- <div class="col-md-4 mb-3">
                   <label for="validationTooltipUsername">Username</label>
@@ -65,21 +65,21 @@
               <div class="form-row">
                 <div class="col-md-3 mb-3">
                   <label for="prodID">ProductID</label>
-                  <input type="text" class="form-control" id="prodID" placeholder="productID" required>
+                  <input type="text" class="form-control" name="prodID" placeholder="productID" required>
                   <div class="invalid-tooltip">
                     productID
                   </div>
                 </div>
                 <div class="col-md-6 mb-3">
                   <label for="price">Price</label>
-                  <input type="text" class="form-control" id="price" placeholder="price" required>
+                  <input type="number" class="form-control" name="price" placeholder="price" name="price" required>
                   <div class="invalid-tooltip">
                     Price per unit
                   </div>
                 </div>
                 <div class="col-md-3 mb-3">
                   <label for="quantity">Quantity</label>
-                  <input type="text" class="form-control" id="quantity" placeholder="quantity" required>
+                  <input type="number" class="form-control" id="quantity" name="quantity" placeholder="quantity" required>
                   <div class="invalid-tooltip">
                     quantity
                   </div>
