--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
     <a class="nav-link" href="/customer"><i class="fas fa-user">Customer</i></a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/seller"><i class="fas fa-user">Seller</i></a>
+    <a class="nav-link" href="/seller"><i class="fas fa-user"><span>Seller<span></i></a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i></a>
