local authentication done, to do cart in session

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,6 +9,7 @@
   </header>
   <br>
 <!-- Page Content -->
+<h5>Welcome <%= user %></h5>
 <div class="container">
 
   <h4 class="font-weight-light text-center text-lg-left mt-4 mb-0">Products available</h4>
