--- a/views/pages/customerlogin.ejs
+++ b/views/pages/customerlogin.ejs
@@ -197,8 +197,8 @@ a{color:inherit;text-decoration:none}
           <input id="role" type="text" class="input" name="role" value="Customer" readonly>
         </div> -->
 				<div class="group">
-					<label for="name" class="label">Name</label>
-					<input id="username" type="text" class="input" name="name" required>
+					<label for="username" class="label">Name</label>
+					<input id="username" type="text" class="input" name="username" required>
 				</div>
 				<div class="group">
 					<label for="password" class="label">Password</label>
