--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,8 +9,15 @@
   </header><br>
   <script>
   var count = 0;
+  async function trying()
+  {
+    var quantity = await prompt("How many do u want?", 1);
+    typeof quantity
+    console.log(89-54)
+    console.log(quantity)
+  }
     function buy(a){
-      let quantity = prompt("How many do u want?", 1);
+      quantity = prompt("How many do u want?", 1);
       typeof quantity
       var ele = document.getElementById(a).children[0].children[1];
       console.log(ele.nodeName)
