--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-<a class="navbar-brand" href="#">Shopping Cart</a>
+<a class="navbar-brand" href="/cart">Shopping Cart</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
 </button>
@@ -16,7 +16,7 @@
     <a class="nav-link" href="/seller"><i class="fas fa-user"><span>Seller<span></i></a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i></a>
+    <a class="nav-link" href="/cart"><i class="fas fa-shopping-cart"></i></a>
   </li>
   <li class="nav-item active dropdown">
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
