--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,20 +23,20 @@
       Category
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-      <a class="dropdown-item" href="#">Books</a>
-      <a class="dropdown-item" href="#">Clothes</a>
-      <a class="dropdown-item" href="#">Eatables</a>
+      <a class="dropdown-item" href="#books">Books</a>
+      <a class="dropdown-item" href="#clothes">Clothes</a>
+      <a class="dropdown-item" href="#eatables">Eatables</a>
       <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Electronics</a>
+      <a class="dropdown-item" href="#electronics">Electronics</a>
     </div>
   </li>
   <!-- <li class="nav-item">
     <a class="nav-link disabled" href="#">Disabled</a>
   </li> -->
 </ul>
-<form class="form-inline my-2 my-lg-0">
+<!-- <form class="form-inline my-2 my-lg-0">
   <input class="form-control mr-sm-2" type="search" placeholder="Search for items" aria-label="Search">
   <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-</form>
+</form> -->
 </div>
 </nav>
